<resources>

    <string name="app_name">Socialize</string>
    <string name="add_textbox_hint">Add a ToDo item</string>
    <string name="add_button_text">Add</string>
    <string name="mobile_services">Mobile Services </string>
    <string name="menu_refresh">Refresh</string>
    <string name="checkbox_text">Item Text</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_stories">StoriesActivity</string>
    <string name="title_activity_add_task">AddTaskActivit</string>
    <string name="title_activity_admin_panel">AdminPanelActivity</string>
    <string name="title_activity_map_home">Map</string>
    <string name="title_activity_event_card">EventCard</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_calendar_agenda">CalendarAgenda</string>
    <string name="title_activity_register">register</string>
    <string name="title_activity_my_events_fragment">MyEventsFragment</string>
    <string name="event_title">EVENT TITLE</string>
    <string name="Description">DESCRIPTION</string>
    <string name="Participants_limit">PARTICIPANTS LIMIT</string>
    <string name="Requirements">REQUIREMENTS</string>
    <string name="Age_range">AGE RANGE</string>
    <string name="Time">TIME</string>
    <string name="Hours">HOURS</string>
    <string name="Date">DATE</string>
    <string name="Event_location">EVENT LOCATION</string>
    <string name="Location">LOCATION :</string>
    <string name="In_doors">INDOORS</string>
    <string name="Out_doors">OUTDOORS</string>
    <string name="Both">BOTH</string>
    <string name="Gender_preference">GENDER PREFERENCE</string>
    <string name="Female">FEMALE</string>
    <string name="Male">MALE</string>
    <string name="both">BOTH</string>
    <string name="Add_event">ADD EVENT</string>
    <string name="Event_name">EVENT NAME</string>
    <string name="Large_text">Info About the Event</string>
    <string name="Details">Details</string>
    <string name="Host_name">HOST NAME</string>
    <string name="Host_username">HOST USERNAME</string>
    <string name="participants_limit">PARTICIPANTS LIMIT</string>
    <string name="Join_requests">JOIN REQUESTS</string>
    <string name="age_range">AGE RANGE</string>
    <string name="event_location">EVENT LOCATION</string>
    <string name="gender_preference">GENDER PREFERENCE</string>
    <string name="Participate">PARTICIPATE</string>
    <string name="Email_or_username">EMAIL OR USERNAME</string>
    <string name="Password">PASSWORD</string>
    <string name="Remember_password">Remember Password</string>
    <string name="Sign_in">SIGN IN</string>
    <string name="Register">REGISTER</string>
    <string name="Sign_up_with_facebook">Sign up with Facebook</string>
    <string name="Sign_up_with_google">Sign up with Google+</string>
    <string name="First_name">First Name:</string>
    <string name="Last_name">Last Name:</string>
    <string name="location">Location:</string>
    <string name="Hobbies">Hobbies:</string>
    <string name="Gender">Gender:</string>
    <string name="All_fields_are_required">ALL FIELDS ARE REQUIRED</string>
    <string name="first_name">FIRST NAME</string>
    <string name="last_name">LAST NAME</string>
    <string name="Email_address">EMAIL ADDRESS</string>
    <string name="Username">USERNAME</string>
    <string name="password">PASSWORD</string>
    <string name="Confirm_password">CONFIRM PASSWORD</string>
    <string name="Birthday">Birth Date:</string>
    <string name="gender">GENDER</string>
    <string name="male">MALE</string>
    <string name="female">FEMALE</string>
    <string name="register">REGISTER</string>
    <string name="Event_info">EVENT INFO</string>
    <string name="time">TIME</string>
    <string name="More">MORE</string>
    <string name="address">Address:</string>
    <string name="Beginnig_time">Beginning Time:</string>
    <string name="Event_summary">Event Summary:</string>
    <string name="adress">Address:</string>
    <string name="Logo">New Button</string>
    <string name="Adress">Address</string>
    <string name="Email">Email:</string>
    <string name="User_role">User Role</string>
    <string name="Extra">Extra</string>
    <string name="accepted_events">Accepted Events</string>
    <string name="all_events">All Events</string>
    <string name="past_events">Past Events</string>
    <string name="events_according_my_location">Events According to My Location</string>
    <string name="events_according_time">Events According to Time</string>
    <string name="my_own_events">My Own Events</string>
    <string name="title_activity_maps">Map</string>
    <string name="hnt_et_location">location</string>
    <string name="str_btn_find">Search</string>
    <string name="save">Save</string>
    <string name="cancel">Canel</string>
    <string name="find">Find</string>
    <string name="selected_location">selected loaction</string>
    <string name="date_number">Date Number</string>
    <string name="event_number">Event Number</string>
    <string name="Event_title">Event Title</string>
    <string name="event_titlee">Event Title</string>
    <string name="reject">New Button</string>
    <string name="event_title_">EVENT TITLE</string>
    <string name="description">DESCRIPTION</string>
    <string name="participants_Limit">PARTICIPANTS LIMIT</string>
    <string name="requirements">REQUIREMENTS</string>
    <string name="date">DATE</string>
    <string name="TIme">TIME</string>
    <string name="Age_Range">AGE RANGE</string>
    <string name="gender_prefence">GENDER PREFERENCE</string>
    <string name="view_participants">View Participants</string>
    <string name="join_event">Join Event</string>
    <string name="user_name">User Name</string>
    <string name="User_name">User Name</string>
    <string name="ADress">Adress</string>
    <string name="email">Email</string>
    <string name="user_role">User Role</string>
    <string name="hours">Event period </string>
    <string name="one_hour">One Hour</string>
    <string name="two_hours">Two Hours</string>
    <string name="three_hours">Three Hours</string>
    <string name="four_hours">Four Hours</string>
    <string name="five_hours">Five Hours</string>
    <string name="six_hours">Six Hours</string>
    <string name="siven_hours">Siven Hours</string>
    <string name="up_to_ten">Up to Ten Hours</string>
    <string name="event_saved">SAVED</string>
    <string name="title_activity_my_event1">MyEvent1</string>
    <string name="Wait">Please Wait</string>
    <string name="signing_in">Signing in...</string>
    <string name="Coordinators">Coordinators</string>
    <string name="Waiting_to_approval">Waiting for approval</string>
    <string name="Guide">Guides</string>
    <string name="Maneger">Manager</string>
    <string name="Coordinator">Coordinator</string>
    <string name="Guide_1">Guide</string>
    <string name="Teenager">Teenager</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="PhoneNumber" >Phone Number:</string>
    <string name="Restoring_Key">Key to Restore Password</string>
    <string name="title_activity_intro">IntroActivity</string>
    <string name="ACCEPTED">ACCEPTED</string>
    <string name="CANCELED">CANCELED</string>
    <string name="REJECTED">REJECTED</string>
    <string name="waiting_to_confirm">Waiting To Confirm</string>
    <string name="ALL_USERS">All</string>

</resources>