<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
   android:orientation="vertical"
    tools:context="com.alsalam.sclzroot.Activities.LoginActivity"
    android:weightSum="1">


    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/imageView2"
        android:layout_gravity="center_horizontal"
        android:src="@mipmap/logo"
         />

    <android.support.design.widget.TextInputLayout
        android:paddingTop="0dp"
        android:id="@+id/usernameWrapper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:hint="@string/Email_or_username"
        android:id="@+id/et_MAIL"
        android:layout_centerHorizontal="true" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:hint="@string/Password"
        android:id="@+id/et_PASS"

        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal" />
    </android.support.design.widget.TextInputLayout>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Sign_in"
        android:id="@+id/btnSign"
        android:layout_gravity="center_horizontal" />

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Register"
            android:id="@+id/btnRegister"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Forgot My Password"
        android:id="@+id/btnForgot_Password"
        android:layout_gravity="center_horizontal" />


</LinearLayout>
