<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="blocksDescendants"
    >

    <!-- A hhhhhhhCardView that contains a TextView -->

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/primary_light"
        card_view:cardCornerRadius="20dp"
        card_view:cardElevation="14dp"
        android:layout_margin="5dp">
        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvUserN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/primary"
                android:text="@string/user_name"
                android:gravity="center_vertical"
                android:textColor="@android:color/white"
                android:allowUndo="false" />

            <TextView
                android:id="@+id/tvAdress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Adress"
                android:gravity="center_vertical"
                android:layout_below="@+id/tvUserN"
                android:layout_alignParentRight="true" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Extra"
                android:id="@+id/btExtra"
                android:layout_alignParentBottom="true"

                android:layout_alignParentEnd="true"
                android:src="@mipmap/ic_sahim"
                android:background="#0000" />



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New Text"
                android:id="@+id/tvAdress2"
                android:layout_below="@+id/tvAdress"
                android:layout_alignParentRight="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New Text"
                android:id="@+id/tvRole2"
                android:layout_below="@+id/tvUserN"
                android:layout_toRightOf="@+id/tvUserN"
                android:layout_marginTop="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_role"
                android:id="@+id/textView4"
                android:layout_alignTop="@+id/tvRole2"
                android:layout_alignParentLeft="true" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"

                android:layout_above="@+id/btExtra"
                android:layout_toRightOf="@+id/TitleWrapper">

                <RadioButton
                    android:id="@+id/radioButton1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/Wait"
                    android:checked="true"
                    android:layout_weight="1" />

                <RadioButton
                    android:id="@+id/radioButton2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="Maneger"
                    android:checked="false"
                    android:layout_weight="1" />

                <RadioButton
                    android:id="@+id/radioButton3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="Teenager"
                    android:checked="false"
                    android:layout_weight="1" />
                <RadioButton
                    android:id="@+id/radioButton4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="Coordinator"
                    android:checked="false"
                    android:layout_weight="1" />
                <RadioButton
                    android:id="@+id/radioButton5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="Guide"
                    android:checked="false"
                    android:layout_weight="1" />

            </RadioGroup>

            <android.support.design.widget.TextInputLayout
                android:paddingTop="0dp"
                android:id="@+id/TitleWrapper"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"></android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Email_address"
                android:id="@+id/tvEmail"
                android:layout_below="@+id/tvRole2"
                android:layout_toRightOf="@+id/TitleWrapper" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New Text"
                android:id="@+id/tvEmail"
                android:layout_alignTop="@+id/tvEmail"
                android:layout_toRightOf="@+id/tvEmail"
                android:layout_marginLeft="22dp" />


        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>