<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- A hhhhhhhCardView that contains a TextView -->

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/primary_light"
        card_view:cardCornerRadius="20dp"
        card_view:cardElevation="14dp"
        android:layout_margin="5dp">
        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvUserN"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:background="@color/primary"
                android:text="@string/user_name"
                android:gravity="center_vertical"
                android:textColor="@android:color/white"
                android:textSize="14dp"
                android:allowUndo="false" />

            <TextView
                android:id="@+id/tvAdrerss"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/User_role"
                android:gravity="center_vertical"
                android:textSize="10dp"
                android:layout_marginLeft="5dp"
                android:layout_below="@+id/textView4"
                android:layout_alignParentStart="true" />

            <TextView
                android:id="@+id/tvEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Email"
                android:textSize="10dp"
                android:layout_marginRight="150dp"
                android:layout_above="@+id/statTv"
                android:layout_alignParentStart="true" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Extra"
                android:id="@+id/btExtra"
                android:layout_alignParentBottom="true"

                android:layout_alignParentEnd="true"
                android:src="@mipmap/ic_sahim"
                android:background="#0000" />
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="23dp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New Text"
                android:id="@+id/tvAdress2"
                android:layout_below="@+id/tvUserN"
                android:layout_toStartOf="@+id/btExtra" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New Text"
                android:id="@+id/tvRole2"
                android:layout_below="@+id/tvAdrerss"
                android:layout_alignStart="@+id/tvAdrerss" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Status"
                android:id="@+id/statTv"
                android:layout_below="@+id/tvAdress2"
                android:layout_alignStart="@+id/tvAdrerss" />
            <android.support.design.widget.TextInputLayout
                android:paddingTop="0dp"
                android:id="@+id/TitleWrapper"
                android:layout_width="match_parent"
                android:layout_height="match_parent"></android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvBirth"
                android:layout_alignStart="@+id/tvRole2"
                android:hint="Birthday" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New Text"
                android:id="@+id/textView4"
                android:layout_below="@+id/statTv"
                android:layout_alignStart="@+id/statTv" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New Text"
                android:id="@+id/statTv2"
                android:layout_below="@+id/tvEmail"
                android:layout_toEndOf="@+id/statTv" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:editable="false"
                android:id="@+id/etPhone"

                android:hint="Phone number"
                android:layout_below="@+id/tvRole2"
                android:layout_alignParentStart="true"
                android:inputType="phone" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@+id/etPhone"
                android:layout_alignParentBottom="true"
                android:layout_toStartOf="@+id/btExtra">

                <RadioButton
                    android:id="@+id/radioButton1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Wait " />

                <RadioButton
                    android:id="@+id/radioButton2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Maneger"
                    android:checked="false" />

                <RadioButton
                    android:id="@+id/radioButton3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Teenager"
                    android:checked="false" />
                <RadioButton
                    android:id="@+id/radioButton4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Coordinator"
                    android:checked="false" />
                <RadioButton
                    android:id="@+id/radioButton5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Guide"
                    android:checked="false" />
            </RadioGroup>


        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>